--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,14 +7,5 @@
     = javascript_include_tag "http://localhost:9292/faye.js"
     = csrf_meta_tags
   %body
-    #container
-      #user_nav
-        - if user_signed_in?
-          %p= "Signed in as #{current_user.email}"
-          |
-          = link_to "Sign out ", destroy_user_session_path
-        - else
-          = link_to "Sign up", new_user_registration_path
-          |
-          = link_to "Sign in", new_user_session_path
+    = render "layouts/session_links"
     = yield
