--- a/app/views/layouts/_session_links.html.haml
+++ b/app/views/layouts/_session_links.html.haml
@@ -12,3 +12,7 @@
       |
       %li
         = link_to "Sign in", new_user_session_path
+      %li
+        = link_to "Sign in with Facebook", "/auth/facebook/",  id: 'sign_in_with_facebook'
+      %li
+        = link_to "Sign in with Twitter", "/auth/Twitter/"
