Use bootstrap-sass

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,4 +1,8 @@
-%h1= 'Bienvenido a JamaHub'
+.container
+  .hero-unit
+    %h1= 'Bienvenid@'
 
-%h2= 'Este es el home'
+    %h2= 'Este es el home'
+
+    = link_to "No hacer click!!!", "#", class: "btn btn-primary btn-large", rel: "tooltip", title: "TE QUIERO MI GUAPO!", id: "main_button", :'data-placement' => "bottom"
 
