--- a/app/views/layouts/_session_links.html.haml
+++ b/app/views/layouts/_session_links.html.haml
@@ -1,18 +1,17 @@
-%nav
-  %ul#user_nav
-    - if user_signed_in?
-      %li
-        %span= "Signed in as #{current_user.email}"
-      |
-      %li
-        = link_to "Sign out ", destroy_user_session_path, :method => :delete
-    - else
-      %li
-        = link_to "Sign up", new_user_registration_path
-      |
-      %li
-        = link_to "Sign in", new_user_session_path
-      %li
-        = link_to "Sign in with Facebook", "/auth/facebook/",  id: 'sign_in_with_facebook'
-      %li
-        = link_to "Sign in with Twitter", "/auth/Twitter/"
+.container
+  %nav
+    %ul#user_nav.nav.nav-tabs
+      - if user_signed_in?
+        %li
+          %span= "Signed in as #{current_user.email}"
+        %li
+          = link_to "Sign out ", destroy_user_session_path, :method => :delete
+      - else
+        %li
+          = link_to "Sign up", new_user_registration_path
+        %li
+          = link_to "Sign in", new_user_session_path
+        %li
+          = link_to "Sign in with Facebook", "/auth/facebook/",  id: 'sign_in_with_facebook'
+        %li
+          = link_to "Sign in with Twitter", "/auth/Twitter/"
