--- a/app/views/after_signup/complete_profile.html.haml
+++ b/app/views/after_signup/complete_profile.html.haml
@@ -1,10 +1,14 @@
-%h1
-  Welcome #{@profile.full_name}
+.row
+  .span12
+    %h1
+      Welcome #{@profile.full_name}
+  .span6.offset4
+    %h2
+      Almost there:
+    = semantic_form_for @profile do |f|
+      = f.inputs do
+        = f.input :email 
+        = f.input :gender,  :as => :select,      :collection => ["Male", "Female"]
+        = f.input :address, :input_html => {  :rows => 10, :cols => 20, :maxlength => 10  }
+        = f.action :submit, label: "Complete Sign Up", :input_html => { :class => 'btn btn-success' }
 
-%h2
-  1. Almost there:
-= semantic_form_for @profile do |f|
-  = f.input :email 
-  = f.input :gender,  :as => :select,      :collection => ["Male", "Female"]
-  = f.input :address, :input_html => {  :rows => 10, :cols => 20, :maxlength => 10  }
-  = f.action :submit, :as => :button, class: :btn-success
