--- a/app/views/after_signup/complete_profile.html.haml
+++ b/app/views/after_signup/complete_profile.html.haml
@@ -9,6 +9,6 @@
       = f.inputs do
         = f.input :email 
         = f.input :gender,  :as => :select,      :collection => ["Male", "Female"]
-        = f.input :address, :input_html => {  :rows => 10, :cols => 20, :maxlength => 10  }
-        = f.action :submit, label: "Complete Sign Up", :input_html => { :class => 'btn btn-success' }
+        = f.input :address, :as => :text
+        = f.action :submit, label: "Complete Sign Up", :input_html => { :class => "btn btn-success" }
 
