--- a/app/views/after_signup/complete_profile.html.haml
+++ b/app/views/after_signup/complete_profile.html.haml
@@ -1,13 +1,20 @@
 .row
-  .span12
-    %h1
-      Welcome #{@profile.full_name}
+  - if @profile.full_name
+    .span12
+      %h1
+        Welcome #{@profile.full_name} 
   .span6.offset4
     %h2
       Almost there:
     = semantic_form_for @profile do |f|
       = f.inputs do
-        = f.input :email 
+        - unless @user.email
+          = f.semantic_fields_for :user do |u|
+            = u.input :email 
+            
+        - unless @profile.full_name
+          = f.input :full_name
+
         = f.input :gender,  :as => :select,      :collection => ["Male", "Female"]
         = f.input :address, :as => :text
         = f.action :submit, label: "Complete Sign Up", :input_html => { :class => "btn btn-success" }
