--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,8 +1,7 @@
 %h2 Sign up
 
-= form_for(resource, :as => resource_name, :url => after_signup_path(:complete_profile), :method => :get) do |f|
-  - if resource.errors.any?
-    %p= "There was an error, please try again."
+= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
+  = devise_error_messages!
   %div
     = f.label :email
     = f.email_field :email
