--- a/app/views/layouts/admin/application.html.haml
+++ b/app/views/layouts/admin/application.html.haml
@@ -22,13 +22,17 @@
                 %i.fa-icon-bar-chart
                 %span.hidden-tablet
                   Dashboard
+            %li
               %a{href: admin_pages_path}
                 %i.fa-icon-bar-chart
                 %span.hidden-tablet
                   Pages
+            %li
               %a{href: admin_dashboards_path}
                 %i.fa-icon-bar-chart
                 %span.hidden-tablet
                   Users
-      .content
-        = yield
+      
+      #content.span11
+        .row-fluid.sortable
+          = yield
