--- a/app/views/layouts/admin/application.html.haml
+++ b/app/views/layouts/admin/application.html.haml
@@ -24,12 +24,12 @@
                   Dashboard
             %li
               %a{href: admin_pages_path}
-                %i.fa-icon-bar-chart
+                %i.fa-icon-edit
                 %span.hidden-tablet
                   Pages
             %li
-              %a{href: admin_dashboards_path}
-                %i.fa-icon-bar-chart
+              %a{href: admin_users_path}
+                %i.fa-icon-group
                 %span.hidden-tablet
                   Users
       
