--- a/app/views/admin/pages/_form.html.haml
+++ b/app/views/admin/pages/_form.html.haml
@@ -1,7 +1,6 @@
-= semantic_form_for @page do |f|
-  = f.inputs do
-    = f.input :title
-    = f.input :body
-
-  = f.actions do
-    = f.action :submit, :as => :input
+#admin_form
+  = semantic_form_for @page do |f|
+    = f.inputs do
+      = f.input :title,  input_html: {class: 'span11'}, placeholder: "Enter title..."
+      = f.input :body, as: :text,  input_html: {class: 'span11'}, placeholder: "Enter title..."
+      = f.action :submit, :as => :button, button_html: {class: 'pull_left btn btn-success'}, placeholder: "Enter title..."
