--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -1,5 +1,5 @@
 .box.span12
   %h1 
     Users
-  = create_table_for User, @users_grid, ["id", "created_at", "updated_at", "email", "username"]      
+  = create_table_for User, @users_grid, ["id", "email", "username", "created_at", "updated_at"]      
 
