Admin for Users

--- a/app/views/admin/pages/_form.html.haml
+++ b/app/views/admin/pages/_form.html.haml
@@ -1,5 +1,5 @@
 #admin_form
-  = semantic_form_for @page do |f|
+  = semantic_form_for [:admin, @page] do |f|
     = f.inputs do
       = f.input :title,  input_html: {class: 'span11'}, placeholder: "Enter title..."
       = f.input :body, as: :text,  input_html: {class: 'span11'}, placeholder: "Enter title..."
