--- a/app/views/admin/users/show.html.haml
+++ b/app/views/admin/users/show.html.haml
@@ -1,5 +1,5 @@
 %p#notice= notice
 
-= link_to 'Edit', edit_admin_page_path(@page)
+= link_to 'Edit', edit_admin_user_path(@user)
 \|
-= link_to 'Back', admin_pages_path
+= link_to 'Back', admin_user_path
