--- a/app/views/layouts/_session_links.html.haml
+++ b/app/views/layouts/_session_links.html.haml
@@ -1,6 +1,6 @@
 .container.navbar
   .navbar-inner 
-    = link_to "Rtrap", "#", class: "brand"
+    = link_to "TANE", "#", class: "brand"
     #user_nav.nav-collapse.navbar-responsive-collapse.collapse
       %ul.nav.pull-left
         %li.active
