--- a/app/assets/stylesheets/admin/admin.css.sass
+++ b/app/assets/stylesheets/admin/admin.css.sass
@@ -1,20 +1,23 @@
-.pull_left
-  float: left
-.pull_right
-  float: right
-#admin_form
+#admin
+  ul.curren_user
+    margin-right: 10px !important
+  .pull_left
+    float: left
+  .pull_right
+    float: right
+  #admin_form
 
-#grid
+  #grid
 
-  table
-    border: 0px !important
-    tr
-      border-bottom: 1px solid black
-      line-height: 46px
-  &.table-bordered, td, th
-    border: 0px !important
+    table
+      border: 0px !important
+      tr
+        border-bottom: 1px solid black
+        line-height: 46px
+    &.table-bordered, td, th
+      border: 0px !important
 
-  table
-    .actions
-      a
-        margin-right: 5px
+    table
+      .actions
+        a
+          margin-right: 5px
