--- a/app/views/layouts/admin/application.html.haml
+++ b/app/views/layouts/admin/application.html.haml
@@ -5,7 +5,7 @@
     = stylesheet_link_tag "admin/application", :media => "all"
     = javascript_include_tag "admin/application"
     = csrf_meta_tags
-  %body
+  %body#admin
     .navbar
       .navbar-inner
         .container-fluid        
@@ -13,7 +13,7 @@
             %i.halflings-icon.white.qrcode
             %span Admin Console
           .nav-no-collapse.header-nav
-            %ul.nav.pull-right
+            %ul.nav.pull-right.current_user
               %li
                 %a{href: profile_path(current_user.profile), class: :btn}
                   %i.halflings-icon.white.user
