several tune ups to admin

--- a/app/views/layouts/admin/application.html.haml
+++ b/app/views/layouts/admin/application.html.haml
@@ -13,7 +13,7 @@
             %i.halflings-icon.white.qrcode
             %span Admin Console
           .nav-no-collapse.header-nav
-            %ul.nav.pull-right.current_user
+            %ul.nav.current_user
               %li
                 %a{href: profile_path(current_user.profile), class: :btn}
                   %i.halflings-icon.white.user
